# geomcore

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: eval_throughput.rs
docs/: api.md  benchmarks.md  index.md  migrating-from-geomdl.md  quickstart.md  releasing.md  validation.md
docs/tutorials/: bsplines.md  curve-on-surface.md  curves-and-surfaces.md  geometry-basics.md
examples/: sample_conics.rs
geomcore-py/: Cargo.toml  README.md  pyproject.toml
geomcore-py/src/: lib.rs
geomcore-py/tests/: test_bindings.py
geomrust-py/: Cargo.toml  pyproject.toml
geomrust-py/src/: lib.rs
geomrust-py/tests/: test_bindings.py
src/: frame.rs  lib.rs  point.rs  transform.rs  vector.rs
src/curve_math/: analytic.rs  bspline.rs  mod.rs
src/curves/: bspline.rs  circle.rs  curve.rs  curve2d.rs  ellipse.rs  hyperbola.rs  line.rs  mod.rs  parabola.rs  parametrize.rs
src/surface_math/: analytic.rs  bspline.rs  mod.rs
src/surfaces/: bspline.rs  cone.rs  cylinder.rs  mod.rs  plane.rs  sphere.rs  surface.rs  torus.rs
tests/: vs_fixtures.rs
tests/common/: mod.rs
tests/fixtures/: construction.json  curves_analytic.json  curves_bspline.json  parametrize.json  surfaces_analytic.json  surfaces_bspline.json  transforms.json
