[package]
name = "geomrust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A pure, standalone geometric kernel for CAD-grade curves and surfaces: parametric evaluation, transformations, and curve-on-surface parametrization."
repository = "https://github.com/GabrielJMS/geomrust"
keywords = ["geometry", "cad", "curves", "surfaces", "nurbs"]
categories = ["mathematics", "graphics"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = [".", "geomrust-py"]
