[package]
name = "geomcore"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A pure, standalone geometric kernel for CAD-grade curves and surfaces: parametric evaluation, transformations, and curve-on-surface parametrization."
repository = "https://github.com/GabrielJMS/geomcore"
keywords = ["geometry", "cad", "curves", "surfaces", "nurbs"]
categories = ["mathematics", "graphics"]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.7"

[[bench]]
name = "eval_throughput"
harness = false

[workspace]
members = [".", "geomcore-py"]

[workspace.package]
version = "0.1.0"
