[package]
name = "geomrust-py"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Python bindings for geomrust, a standalone geometric kernel for CAD-grade curves and surfaces."
repository = "https://github.com/GabrielJMS/geomrust"
publish = false

[lib]
name = "geomrust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }
geomrust = { path = ".." }
